--- a/Tools_for_Data_Science_Peer_Graded_Assignment.ipynb
+++ b/Tools_for_Data_Science_Peer_Graded_Assignment.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,8 @@
    ],
    "source": [
     "def fib(n):\n",
+    "    if n < 0:\n",
+    "        raise ValueError(\"n must be >= 0\")\n",
     "    return n if n in (0, 1) else fib(n-1) + fib(n-2)\n",
     "\n",
     "\n",
